# NaangisKhan-Modpack-Installer

./: .gitignore
.github/workflows/: build.yml
client/: config.yaml  options.txt  run.bat  run.sh  serversDat.ps1  update.bat
client/config/: tips.json
client/gui-updater/: package-lock.json  package.json
client/gui-updater/src/: App.tsx
client/gui-updater/src-tauri/: Cargo.toml  tauri.conf.json
client/gui-updater/src-tauri/icons/: icon.icns
client/gui-updater/src-tauri/src/: main.rs  updater.rs  version.rs
client/resourcepacks/Naangiskhan/: pack.mcmeta
client/resourcepacks/Twilight Forest Patch/: pack.mcmeta
client/updater/: Cargo.toml
client/updater/src/: app.rs  frontend.rs  localizer.rs  main.rs  updater.rs  version.rs
client/updater/src/backend/: updater.rs
client/updater/src/frontend/: app.rs  scene.rs  title_scene.rs  updater_scene.rs
server/config/: ars_nouveau-common.toml  ars_nouveau-server.toml  carryon-common.toml  create_central_kitchen-common.toml  delightful-common.toml  immersive_aircraft.json  lightmanscurrency-common.lcconfig  lightmanscurrency-server.lcconfig  naangiskhan-common.toml  quark-common.toml  rideableravagers.json  simplebackups-common.toml  supplementaries-common.toml  watut-client.toml
server/config/ars_nouveau/: glyph_blink.toml  glyph_leap.toml
server/config/croptopia/: croptopia_v3.conf
server/config/lightmanscurrency/: MasterCoinList.json  PersistentTraders.json  PersistentTraders_bak.json  PersistentTraders_bak2.json  (+1 more)
server/scripts/: hoes.zs  main.zs  recipes.zs  tooltips.zs  util.zs
(+481 files in other folders)
