[package]
name = "gui-updater"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
log = "^0.4"
reqwest = { version = "0.12.3", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "^0.12.0"
tauri = { version = "1", features = ["shell-open"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
